fix: scrollbar

--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,55 +1,51 @@
 @use 'variables' as *;
 
-@mixin scrollbar {
-  @supports (scrollbar-width: auto) {
+@supports (scrollbar-width: thin) {
+  * {
     scrollbar-color: var(--background-color-thumb) var(--hover);
     scrollbar-width: thin;
   }
+}
 
-  @supports selector(::-webkit-scrollbar) {
-    @media screen and (hover: hover) {
-      ::-webkit-scrollbar {
-        width: 14px;
-      }
+@supports not (scrollbar-width: thin) {
+  ::-webkit-scrollbar {
+    width: 14px;
+  }
 
-      ::-webkit-scrollbar-track {
-        background: transparent;
-        transition: background 100ms ease;
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    transition: background 100ms ease;
 
-        &:hover {
-          background: var(--hover);
-        }
-      }
-
-      ::-webkit-scrollbar-thumb {
-        border: 5px solid transparent;
-        background-clip: content-box;
-        border-radius: 10px;
-        box-shadow: inset 0 0 0 10px var(--background-color-thumb);
-
-        &:hover {
-          box-shadow: inset 0 0 0 10px var(--background-color-thumb-hover);
-        }
-      }
-
-      ::-webkit-scrollbar-button {
-        display: none;
-        width: 0;
-        height: 0;
-      }
-
-      ::-webkit-scrollbar-corner {
-        background-color: transparent;
-      }
+    &:hover {
+      background: var(--hover);
     }
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border: 5px solid transparent;
+    background-clip: content-box;
+    border-radius: 10px;
+    box-shadow: inset 0 0 0 10px var(--background-color-thumb);
+
+    &:hover {
+      box-shadow: inset 0 0 0 10px var(--background-color-thumb-hover);
+    }
+  }
+
+  ::-webkit-scrollbar-button {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background-color: transparent;
   }
 }
 
 *,
 *:before,
 *:after {
-  @include scrollbar;
-
   box-sizing: border-box;
   outline: none;
   appearance: none;
